# perplexity-agent-cli

./: .coveragerc  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL_WINDOWS.md  LICENSE  Makefile  QUICKSTART.md  QUICK_START.md  README.md  README_SIMPLE.md  TESTING.md  TEST_PLAN.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml
.perplexity-cli/: .gitkeep
examples/: __init__.py  quickstart.py
perplexity_cli/: __init__.py  agent_responses.py  cli.py  commands.py  error_protocol.py  executor.py  filesystem.py  models.py  nlp.py  simple_cli.py  state.py  utils.py  watcher.py
scripts/: dev-setup.bat  dev-setup.sh  install.bat  install.ps1  install.sh  run-tests.bat  run-tests.sh  test-complete.bat  test-complete.sh
tests/: __init__.py  conftest.py  test_cli.py  test_cli_complete.py  test_commands.py  test_edge_cases.py  test_error_protocol.py  test_executor.py  test_filesystem.py  test_integration.py  test_nlp_complete.py  test_state.py  test_state_complete.py  test_watcher.py
